# LibreOfficeAutoSave

./: .gitignore  README.md  build_oxt.py  deploy_and_test.ps1  deploy_and_test.sh  pyproject.toml
.github/workflows/: release.yml  tests.yml
src/: Addons.xcu  ProtocolHandler.xcu  description.xml
tests/: test_autosave.py
